--- a/Python/Notebooks/Aula_1_Estruturas_Dados_Padrao.ipynb
+++ b/Python/Notebooks/Aula_1_Estruturas_Dados_Padrao.ipynb
@@ -900,10 +900,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "nova_lista = [1,2,3,4,5,6]"
@@ -968,6 +966,59 @@
    "source": [
     "nova_lista[-2]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 2, 3]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nova_lista[:3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "novissima=nova_lista[:3]+[1,5,8,0,8]+nova_lista[3:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 1, 5, 8, 0, 8, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(novissima)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
