--- a/Python/Notebooks/Aula_3_Loops_e_condicionais.ipynb
+++ b/Python/Notebooks/Aula_3_Loops_e_condicionais.ipynb
@@ -184,22 +184,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[0, 2, 4, 6, 8, 10]"
+       "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18, 20]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list(range(0,11,2))"
+    "list(range(0,21,2))"
    ]
   },
   {
@@ -306,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +337,7 @@
     "    #print()\n",
     "    #print(inteiro + 1)\n",
     "    print('Margaridas')\n",
-    "    print()"
+    "    print() #dá espaço"
    ]
   },
   {
@@ -1053,7 +1053,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
