--- a/Python/Exercicios/Avaliacoes/Quizz_11_08_2017_Respostas.ipynb
+++ b/Python/Exercicios/Avaliacoes/Quizz_11_08_2017_Respostas.ipynb
@@ -199,23 +199,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1, 2, 287, 4, 3]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#Tipos mutáveis podem ser modificados\n",
-    "lista = [1,2,3,4] #exemplo de tipo mutável\n",
-    "lista.append(3)\n",
-    "lista[2] = 287\n",
-    "print(lista)"
+    "#Tipos mutáveis podem ser modificados e imutáveis não podem.\n",
+    "#Exemplos: lista é mutável e tupla é imutável\n"
    ]
   },
   {
@@ -547,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2+"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
