--- a/Python/Exercicios/Avaliacoes/Quizz_tipo_dados.ipynb
+++ b/Python/Exercicios/Avaliacoes/Quizz_tipo_dados.ipynb
@@ -9,12 +9,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Tipos numéricos: int,float e complex\n",
+    "x=3\n",
+    "y=6.5 \n",
+    "z=2+3j\n",
+    "#Tipo lista\n",
+    "lista=[1,2,4,7,9,10]\n",
+    "#Tipo string\n",
+    "s='string'\n",
+    "#Tipo Booleano\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -25,48 +33,108 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#float para int\n",
+    "int(3.4576)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'8'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#int para string\n",
+    "str(8)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1, 2, 4, 7, 9, 10}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#lista para booleano\n",
+    "set(lista)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['d', 'a', 'n', 'i', 'l', 'l', 'o']"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#string para lista\n",
+    "list('danillo')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#int para float\n",
+    "float(4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -81,30 +149,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 18,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "RM={'Nome':'Péricles do Exaltasamba','Idade':'49','Laudo':'Obesidade','Cidade':'Rio de Janeiro','Data':'17/08/2018'}"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 30,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "M=[[255,255,255],[0,0,255],[255,255,0]]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 21,
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "C={'Rio de Janeiro':{'Prefeitura':'1231,-124','Bombeiros':'1263,-167'},\n",
+    "   'Niterói':{'Prefeitura':'1366,-656','Bombeiros':'1356,-168'},\n",
+    "   'Angra dos Reis':{'Prefeitura':'1567,-154','Bombeiros':'1780,-106'},\n",
+    "   'Teresópolis':{'Prefeitura':'1785,-176','Bombeiros':'200,-169'}}\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -115,30 +186,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Obesidade'"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "RM['Laudo']"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "255"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "M[2][1]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'1231,-124'"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "C['Rio de Janeiro']['Prefeitura']"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -153,12 +257,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 6, 9, 4, 2, 869]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Tipos mutáveis podem ser modificados e imutáveis não podem.\n",
+    "#Exemplos: lista é mutável e tupla é imutável\n",
+    "listinha=[1,6,9,4,2]\n",
+    "#pode adicionar elementos\n",
+    "listinha.append(869)\n",
+    "listinha\n",
+    "tupla=()\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -317,7 +438,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
