--- a/Python/Exercicios/Avaliacoes/Quizz_funcoes-Copy1.ipynb
+++ b/Python/Exercicios/Avaliacoes/Quizz_funcoes-Copy1.ipynb
@@ -102,6 +102,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "t0 = time.time()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
