--- a/Python/Exercicios/Avaliacoes/Quizz_funcoes_2_respostas.ipynb
+++ b/Python/Exercicios/Avaliacoes/Quizz_funcoes_2_respostas.ipynb
@@ -9,10 +9,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 5,
+   "metadata": {},
    "outputs": [],
    "source": [
     "lista = [1,2,3,'4',5,6.3,7.4 + 2j,\"123\",[1,2,3], 93, \"98\", (1,2,3,'4')]"
@@ -32,16 +30,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, '4', 5, 6.3, (7.4+2j), '123', [1, 2, 3], 93, '98', (1, 2, 3, '4')]\n"
+     ]
+    }
+   ],
    "source": [
     "def imprime_a_s(container):\n",
     "    for i in range(len(container)):\n",
     "        if i == 0:\n",
-    "            print(container)"
+    "            print(container)\n",
+    "imprime_a_s(lista)"
    ]
   },
   {
@@ -103,12 +108,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "1-HOME-SWEET-HOME\n",
+      "MY-MISERABLE-JOB\n",
+      "1-4663-79338-4663\n",
+      "69-647372253-562\n"
+     ]
+    }
+   ],
+   "source": [
+    "lista=[]\n",
+    "numero=int(input())\n",
+    "for n in range(1,numero+1):\n",
+    "    lista.append(str(input()))\n",
+    "\n",
+    "for k in lista:\n",
+    "    N=''\n",
+    "    for p in k:\n",
+    "        if p in 'ABC':\n",
+    "            p='2'\n",
+    "            N+=p\n",
+    "        elif p in 'DEF':\n",
+    "            p='3'\n",
+    "            N+=p\n",
+    "        elif p in 'GHI':\n",
+    "            p='4'\n",
+    "            N+=p\n",
+    "        elif p in 'JKL':\n",
+    "            p='5'\n",
+    "            N+=p\n",
+    "        elif p in 'MNO':\n",
+    "            p='6'\n",
+    "            N+=p\n",
+    "        elif p in 'PQRS':\n",
+    "            p='7'\n",
+    "            N+=p\n",
+    "        elif p in 'TUV':\n",
+    "            p='8'\n",
+    "            N+=p\n",
+    "        elif p in 'WXYZ':\n",
+    "            p='9'\n",
+    "            N+=p\n",
+    "        else:\n",
+    "            p=p\n",
+    "            N+=p       \n",
+    "    print(N)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -119,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -127,31 +179,22 @@
     "def acha_letra(texto,letra):\n",
     "    palavras = [p.lower().strip(string.punctuation) for p in texto.split()]\n",
     "    escolhidas = [p for p in palavras if letra in p]\n",
-    "    print(escolhidas)\n",
-    "    return escolhidas"
+    "    print(palavras)\n",
+    "    print(escolhidas)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "['quero', 'ver', 'se', 'vocês', 'conseguem', 'encontrar', 'as', 'palavras', 'neste', 'texto', 'sem', 'erros']\n",
       "['quero', 'ver', 'encontrar', 'palavras', 'erros']\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "['quero', 'ver', 'encontrar', 'palavras', 'erros']"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
