--- a/Python/Caderno.ipynb
+++ b/Python/Caderno.ipynb
@@ -3023,7 +3023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3038,7 +3038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3047,39 +3047,299 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class User:\n",
+    "\n",
+    "    seq = 0\n",
+    "    objects = []\n",
+    "\n",
+    "    def __init__(self, nome, idade):\n",
+    "        self.id = None\n",
+    "        self.nome = nome\n",
+    "        self.idade = idade\n",
+    "\n",
+    "    def save(self):\n",
+    "        self.__class__.seq += 1\n",
+    "        self.id = self.__class__.seq\n",
+    "        self.__class__.objects.append(self)\n",
+    "\n",
+    "    def __str__(self):   #aparentemente isso é pra quando vc vai dar print na instância\n",
+    "        return self.nome\n",
+    "    \n",
+    "    def __repr__(self): # aparentemente isso representa a instância, veja que isso deu o append no objects(self) \n",
+    "        return '<{}: {} - {} - {}>\\n'.format(self.__class__.__name__, self.id, self.nome, self.idade)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u1 = User('Regis', 35)\n",
+    "u2 = User('Fabio',20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "u1.save()\n",
+    "u2.save()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Danillo'"
+       "2"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "danny.nome"
+    "u2.id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[<User: 1 - Regis - 35>, <User: 2 - Fabio - 20>]"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "u1.objects"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Triangulo:\n",
+    "    def __init__(self,lado1,lado2,lado3):\n",
+    "        self.lado1 = lado1\n",
+    "        self.lado2 = lado2\n",
+    "        self.lado3 = lado3\n",
+    "        self.tipo()\n",
+    "        \n",
+    "    def __repr__(self):\n",
+    "        return \"Triangulo nas paradas\"\n",
+    "        \n",
+    "    def tipo(self):\n",
+    "        if self.lado1 == self.lado2 and self.lado1 == self.lado3:\n",
+    "            print('equilátero')\n",
+    "            self.tipo = 'equilátero'\n",
+    "        elif self.lado1 == self.lado2 or \\\n",
+    "             self.lado1 == self.lado3 or \\\n",
+    "             self.lado2 == self.lado3:\n",
+    "            print('isósceles')\n",
+    "            self.tipo = 'isósceles'\n",
+    "        else:\n",
+    "            print('escaleno')\n",
+    "            self.tipo = 'escaleno'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Danillo\n"
+      "escaleno\n"
      ]
     }
    ],
    "source": [
-    "print(danny)"
+    "t=Triangulo(3,4,5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'escaleno'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t.tipo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Triangulo nas paradas"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "__main__.Triangulo"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Triangulo\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Dog:\n",
+    "    def __init__(self, name, raca='vira lata'):\n",
+    "        self.name = name\n",
+    "        self.raca = raca\n",
+    "        self.tricks = []\n",
+    "\n",
+    "    def add_trick(self, trick):\n",
+    "        if not trick in self.tricks:\n",
+    "            self.tricks.append(trick)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d = Dog('Fido','Pastor Alemao')\n",
+    "e = Dog('Buddy','Cocker')\n",
+    "f = Dog('Rex')\n",
+    "d.add_trick('Rolar')\n",
+    "e.add_trick('Fingir-se de morto')\n",
+    "d.add_trick('Pedir Comida')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Fido'"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Doberman'"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f.raca"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Rolar', 'Pedir Comida']"
+      ]
+     },
+     "execution_count": 52,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d.tricks\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f = Dog('Rex','Doberman')"
    ]
   },
   {
