--- a/Python/Notebooks/Aula_4_Funcoes.ipynb
+++ b/Python/Notebooks/Aula_4_Funcoes.ipynb
@@ -848,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -860,23 +860,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(5, 1, 2, 'string')\n",
+      "(5, 1, 2, 'string', [1, 2, 3])\n",
       "5\n",
       "1\n",
       "2\n",
-      "string\n"
+      "string\n",
+      "[1, 2, 3]\n"
      ]
     }
    ],
    "source": [
-    "indefinido(5,1,2,'string')"
+    "indefinido(5,1,2,'string',[1,2,3])"
    ]
   },
   {
@@ -1548,7 +1549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
