--- a/Python/Teoria dos Grafos.ipynb
+++ b/Python/Teoria dos Grafos.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,6 +289,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def Dijkstra2(G,v):   #essa é a boa\n",
+    "    dist={}\n",
+    "    for k in list(G.keys()):\n",
+    "        dist[k]=float(\"inf\")\n",
+    "    \n",
+    "    dist[v]=0\n",
+    "    Q=list(G.keys())\n",
+    "    \n",
+    "    while len(Q)!=0:\n",
+    "        dic={}\n",
+    "        for i in Q:\n",
+    "            dic[i]=dist[i]\n",
+    "        u=min(dic, key = lambda x : dic.get(x))\n",
+    "        Q.remove(u)\n",
+    "        for k in list(G[u].keys()):\n",
+    "            dist[k]=min(dist[k],dist[u]+G[u][k]) \n",
+    "            \n",
+    "    return dist"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'Caltrain': 7,\n",
+       " 'Foster Field': 3,\n",
+       " 'Gates': 0,\n",
+       " 'Memchu': 2,\n",
+       " 'Old Union': 5,\n",
+       " 'Panda Express': 14,\n",
+       " 'Stern Dining': 4,\n",
+       " 'The Dish': 20}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Dijkstra2(G,'Gates')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 382,
    "metadata": {},
    "outputs": [
@@ -354,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 578,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -374,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 580,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -391,20 +444,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 581,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'Cal': ['U', 'Ucla'],\n",
+       "{'Cal': ['Ucla', 'U'],\n",
        " 'S': ['Cal', 'Ucla', 'SC'],\n",
        " 'SC': ['Cal', 'Ucla'],\n",
        " 'U': ['Ucla', 'SC'],\n",
        " 'Ucla': []}"
       ]
      },
-     "execution_count": 581,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,14 +468,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-1-6fdbe4e36680>, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-6fdbe4e36680>\"\u001b[0;36m, line \u001b[0;32m3\u001b[0m\n\u001b[0;31m    time=\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
    "source": [
     "def Kosaraju(G,u):\n",
     "    time=0\n",
     "    time="
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
